[metadata]
name = zenko-e2e
summary = End-to-End tests for Zenko
description-file =
    README.rst
author = The Zenko Development Team
home-page = https://zenko.io
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
setup_requires =
    pytest-runner ~= 4.2
install_requires =
    pytest ~= 3.5
    pytest-runner ~= 4.2 # To make `pip-compile` happy
    pytest-xdist ~= 1.22
    boto3 ~= 1.7
include_package_data = True
packages = find:

[aliases]
test=pytest

[tool:pytest]
markers =
    nondestructive: mark a test as non-destructive.
    conformance: mark a test as a post-install conformance/validation test.
addopts = --verbose

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
